Finished HDS Unit, added catalytic reformer and started steam cracker. Added circuit maker lit appearance. Need to update every screen